--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "link-preview-generator": "^1.1.0",
-    "url-unshorten": "^1.0.6"
+    "see-link": "^2.0.1"
   }
 }
